--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -255,6 +255,10 @@
     <Compile Include="Migrations\201911232155343_PopulateGenres.Designer.cs">
       <DependentUpon>201911232155343_PopulateGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912081703404_UpdateMoviePropertiesWithRequired.cs" />
+    <Compile Include="Migrations\201912081703404_UpdateMoviePropertiesWithRequired.Designer.cs">
+      <DependentUpon>201912081703404_UpdateMoviePropertiesWithRequired.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -265,6 +269,8 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\NewMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -330,6 +336,8 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -381,6 +389,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911232155343_PopulateGenres.resx">
       <DependentUpon>201911232155343_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912081703404_UpdateMoviePropertiesWithRequired.resx">
+      <DependentUpon>201912081703404_UpdateMoviePropertiesWithRequired.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
