--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -18,7 +18,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44372</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -283,8 +283,21 @@
     <Compile Include="Migrations\201912081703404_UpdateMoviePropertiesWithRequired.Designer.cs">
       <DependentUpon>201912081703404_UpdateMoviePropertiesWithRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004112018039_SeedUsers.cs" />
+    <Compile Include="Migrations\202004112018039_SeedUsers.Designer.cs">
+      <DependentUpon>202004112018039_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004121536131_AddDrivingLicenseToAppUser.cs" />
+    <Compile Include="Migrations\202004121536131_AddDrivingLicenseToAppUser.Designer.cs">
+      <DependentUpon>202004121536131_AddDrivingLicenseToAppUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004121621525_AddPhoneToApplicationUser.cs" />
+    <Compile Include="Migrations\202004121621525_AddPhoneToApplicationUser.Designer.cs">
+      <DependentUpon>202004121621525_AddPhoneToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationsUser.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -292,6 +305,8 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RegisterViewModel.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
@@ -535,13 +550,14 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -595,6 +611,15 @@
     <EmbeddedResource Include="Migrations\201912081703404_UpdateMoviePropertiesWithRequired.resx">
       <DependentUpon>201912081703404_UpdateMoviePropertiesWithRequired.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004112018039_SeedUsers.resx">
+      <DependentUpon>202004112018039_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004121536131_AddDrivingLicenseToAppUser.resx">
+      <DependentUpon>202004121536131_AddDrivingLicenseToAppUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004121621525_AddPhoneToApplicationUser.resx">
+      <DependentUpon>202004121621525_AddPhoneToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -614,7 +639,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49539</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49539/</IISUrl>
+          <IISUrl>https://localhost:44372/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
